# AI-TRADER

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  hello.py  pyproject.toml
.claude/: index.json
.codex/skills/chan-crypto-trader/: SKILL.md
.serena/: project.yml
docs/: chan_codex.md  chan_gemini.md  缠论.txt
examples/: basic_signal.py  hello.py
scripts/: _script_utils.py  run_btc_4h_backtest.py  run_chan_diagnostic.py  run_chan_replay.py  run_chan_review_server.py  run_chan_vlm_review.py  run_filter_comparison.py  run_kline8_alignment_audit.py  warm_cache.py
src/ai_trader/: __init__.py  hello.py  indicators.py  types.py
src/ai_trader/agents/: __init__.py  trading_agent.py
src/ai_trader/backtest/: __init__.py  engine.py  metrics.py  significance.py
src/ai_trader/chan/: __init__.py  config.py  engine.py  review.py
src/ai_trader/config/: __init__.py  settings.py
src/ai_trader/core/: __init__.py
src/ai_trader/data/: __init__.py  binance_ohlcv.py  gateway.py
src/ai_trader/indicators/: __init__.py  macd.py
src/ai_trader/llm/: __init__.py  chan_vlm_review.py  openai_compat.py
src/ai_trader/orchestrator/: __init__.py  (+1 more)
tests/: test_backtest_execution_semantics.py  test_cache_loader.py  test_chan_core_rules.py  test_chan_oracle_cases.py  test_chan_review.py  test_cost_consistency.py  test_data_quality.py  test_openai_compat.py  test_repaint_rate.py  test_signal_contract.py  test_temporal_consistency.py  test_utils.py
tests/fixtures/: chan_oracle_cases.json
web/chan_review/: DESIGN_SPEC.md  app.js  index.html  styles.css
(+14 files in other folders)
